# quantization-demo

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
app/: celery_app.py  main.py  test.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoint/: health.py  stock.py  user.py
app/cache/: redis.py
app/core/constant/: stock_constant.py
app/core/dep/: core_dep.py
app/core/enums/: source_enum.py  task_enum.py
app/core/exception/: exception_handler.py  exception_handlers.py  exception_registry.py  exceptions.py
app/core/log/: logger.py
app/core/response/: http_code.py  response.py  response_route.py
app/core/security/: jwt.py
app/core/setting/: config.py
app/db/: database.py  uow.py
app/dep/: stock_dep.py  user_dep.py
app/integration/: __init__.py
app/integration/datasource/: baostock.py  base.py  eastmoney.py  tencent.py
app/middleware/: response_middleware.py
app/model/: base.py  fetch_progress.py  fetch_task.py  stock.py  stock_basic.py  stock_daily.py  user.py
app/redis/: redis_client.py
app/repository/: base_repository.py  fetch_progress_repository.py  fetch_task_repository.py  stock_basic_repository.py  stock_daily_repository.py  stock_repository.py  user_repository.py
app/schema/: fetch_progress_schema.py  fetch_task_schema.py  stock.py  stock_daily_schema.py  user.py
app/service/: stock_service.py  user_service.py
app/service/factory/: stock_service_factory.py
app/task/: progress_tracker.py  stock_init_task.py
